--- a/.env
+++ b/.env
@@ -20,7 +20,8 @@ APP_SECRET=2895da921770407aa0aa66fd592a88d5
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-pack ###
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 ###< symfony/webapp-pack ###
 
 ###> doctrine/doctrine-bundle ###
